--- a/roles/fc-web-service/defaults/main.yml
+++ b/roles/fc-web-service/defaults/main.yml
@@ -1,6 +1,7 @@
 
-# By default we assume we're only listening on localhost
+# By default we assume we're only listening on localhost:8080
 fc_webservice_fqdn: localhost
+fc_webservice_port: 8080
 
 # Where the CGI script is found
 fc_webservice_cgi_dir: /opt/celery/repo
