Teach Django which scheme it's serving on

--- a/group_vars/deployed/vars.yml
+++ b/group_vars/deployed/vars.yml
@@ -18,3 +18,4 @@ email_use_ssl: False
 # The webserver hostname - by default figured out by Ansible
 webserver_fqdn: "{{ ansible_fqdn }}"
 webserver_ipv4: "{{ ansible_default_ipv4.address }}"
+webserver_scheme: https
