--- a/group_vars/dev/vars.yml
+++ b/group_vars/dev/vars.yml
@@ -28,6 +28,7 @@ rollbar_post_server_item_access_token: '{{ vault_rollbar_post_server_item_access
 # The webserver hostname - Ansible tends to get this wrong on a VM
 webserver_fqdn: "localhost"
 webserver_ipv4: "127.0.0.1"
+webserver_scheme: http
 
 # How the webserver contacts the experiment runner web service
 
