More tweaks to dev deployment
- Ensure the SSH port stays open
- Dev needs http port opened
- Apt python-openssl package installed via Chaste breaks pip!

--- a/roles/fc-backend/tasks/main.yml
+++ b/roles/fc-backend/tasks/main.yml
@@ -24,6 +24,12 @@
         - scons
         - subversion
 
+- name: Upgrade pyOpenSSL to fix pip  # broken by python-openssl apt package :(
+  become: yes
+  easy_install:
+    name: pyOpenSSL
+    state: latest
+
 - name: Install Chaste & FunctionalCuration
   become: yes
   become_user: '{{ fc_user }}'
