Add vagrant config
This is now the minimal manual intervention route to a full dev
deployment: just a bit of config customisation and `vagrant up`.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
+# Editor backups
 *~
+
+# Retry files produced by failed Ansible runs
 *.retry
 
+# Vagrant's hidden folder
+.vagrant
+
+# Local-dev-only passwords
 group_vars/dev/vault.yml
