Ignore vagrant log files

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@
 # Retry files produced by failed Ansible runs
 *.retry
 
-# Vagrant's hidden folder
+# Vagrant's hidden folder & logs
 .vagrant
+*.log
 
 # Local-dev-only passwords
 group_vars/dev/vault.yml
