--- a/roles/fc-backend/defaults/main.yml
+++ b/roles/fc-backend/defaults/main.yml
@@ -13,3 +13,5 @@ chaste_root: "{{ user_meta[fc_user].home }}/eclipse/workspace/Chaste"
 fc_project_name: FunctionalCuration
 fc_root: "{{ chaste_root }}/projects/{{ fc_project_name }}"
 chaste_fc_exe: "{{ fc_root }}/apps/src/FunctionalCuration"
+
+chaste_version: 0ff3ad0a2d3bdba18b5e615f6b8d5d93ed1fc7db
