Add upgraded Diffie-Hellman group
Following instructions at https://weakdh.org/sysadmin.html.
Generated dhparams.pem with:
    openssl dhparam -out dhparams.pem 2048
Then encrypted with ansible-vault before committing.

--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -5,3 +5,5 @@ ssl_key_folder: /etc/ssl/private
 
 ssl_certificate: "{{ ssl_certificate_folder }}/weblab.crt"
 ssl_certificate_key: "{{ ssl_key_folder }}/weblab.key"
+
+dh_param_path: /etc/nginx/dhparams.pem
