Populate entity cache when deploying
This requires the changes on the visibility-notes branch, which add
the new manage.py command.

--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -60,6 +60,13 @@
       notify:
         - restart uwsgi
 
+    - name: Django | Populate entity cache
+      django_manage:
+        command: populate_entity_cache
+        app_path: "{{ django_app_path }}"
+        settings: config.settings.deployed
+        virtualenv: '{{ django_virtualenv }}'
+
     - name: Django | Create initial superuser
       django_manage:
         command: createsuperuser --noinput
