Analyse existing entities on deployment
When these analyses can call Celery tasks, we will probably need to
change where this happens!

--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -67,6 +67,13 @@
         settings: config.settings.deployed
         virtualenv: '{{ django_virtualenv }}'
 
+    - name: Django | Analyse entity versions
+      django_manage:
+        command: analyse_entity_versions
+        app_path: "{{ django_app_path }}"
+        settings: config.settings.deployed
+        virtualenv: '{{ django_virtualenv }}'
+
     - name: Django | Create initial superuser
       django_manage:
         command: createsuperuser --noinput
