--- a/roles/fc-backend/tasks/main.yml
+++ b/roles/fc-backend/tasks/main.yml
@@ -49,13 +49,23 @@
         force: yes
       register: code_fc
       notify: restart celery
-    
+
+    - name: Checkout Fitting prototype
+      git:
+        clone: yes
+        dest: '{{ fitting_prototype_root }}'
+        repo: '{{ fitting_prototype_repo }}'
+        version: 'master'
+        update: yes
+        force: yes
+      register: code_fitting_prototype
+
     - name: Default to ubuntu hostconfig for Chaste
       copy:
         dest: '{{ chaste_root }}/python/hostconfig/local.py'
         src: '{{ chaste_root }}/python/hostconfig/ubuntu.py'
         remote_src: yes
-    
+
     - name: FC | Install Python packages
       pip:
         name: '{{ item }}'
@@ -71,6 +81,14 @@
         - numexpr
         - matplotlib<2
         - lxml
+
+    - name: FC | Install Pints from GitHub
+      pip:
+        name: git+https://github.com/pints-team/pints.git
+        state: present
+        virtualenv: '{{ fc_virtualenv }}'
+        virtualenv_python: python2
+        virtualenv_site_packages: yes
 
     - name: Stat FC exe
       stat:
