Selecting 'fitting' branch of django front-end

--- a/group_vars/production/vars.yml
+++ b/group_vars/production/vars.yml
@@ -2,7 +2,7 @@
 
 # Production runs from master branches by default
 
-django_git_branch: master
+django_git_branch: fitting
 celery_git_branch: master
 
 # Django secrets
