Selecting 'fitting' branch of celery task queue in production environment

--- a/group_vars/production/vars.yml
+++ b/group_vars/production/vars.yml
@@ -3,7 +3,7 @@
 # Production runs from master branches by default
 
 django_git_branch: fitting
-celery_git_branch: master
+celery_git_branch: fitting
 
 # Django secrets
 django_db_pass: '{{ vault_django_db_pass }}'
