pycml needs numpy to do interpolation

--- a/roles/fc-backend/tasks/main.yml
+++ b/roles/fc-backend/tasks/main.yml
@@ -23,6 +23,7 @@
         - chaste-dependencies
         - scons
         - subversion
+        - python-numpy
 
 - name: Install Chaste & FunctionalCuration
   become: yes
