Use newer node to run gulp
And rebuild packages if gulp errors, to ensure smooth upgrade path.

--- a/roles/django/meta/main.yml
+++ b/roles/django/meta/main.yml
@@ -10,3 +10,6 @@ dependencies:
     user: '{{ django_user }}'
     virtualenv: '{{ django_virtualenv }}'
     virtualenv_command: pyvenv
+
+  # Ensure node is new enough (and installed)
+  - { role: geerlingguy.nodejs, become: yes }
