--- a/group_vars/webserver/vars.yml
+++ b/group_vars/webserver/vars.yml
@@ -20,7 +20,7 @@ django_staticfiles_path: "{{ django_data_path }}/staticfiles"
 django_media_path: "{{ django_data_path }}/media"
 django_entity_repos_path: "{{ django_data_path }}/repositories"
 django_experiments_path: "{{ django_data_path }}/experiments"
-django_datasets_path: "{{ "django_data_path }}/datasets"
+django_datasets_path: "{{ django_data_path }}/datasets"
 django_virtualenv: "{{ django_dir }}/venv"
 
 # Initial superuser account info - should be passed on command line if desired,
