Set permissions for dir explicitly

--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -10,6 +10,7 @@
     - '{{ django_dir }}'
     - '{{ django_data_path }}'
     - '{{ django_experiments_path }}'
+    - '{{ django_datasets_path }}'
   become: yes
 
 # Install Django & dependencies
