Install postfix for email sending from Django

--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -1,5 +1,11 @@
 # Tasks to set up Django (and Gulp for generating static files)
 
+- name: Install postfix for Django email sending if needed
+  include_role:
+    name: postfix
+  become: yes
+  when: email_smtp_host == 'localhost'
+
 - name: Ensure the Django dirs exist with correct permissions
   file:
     path: '{{ item }}'
