--- a/roles/rabbitmq/tasks/main.yml
+++ b/roles/rabbitmq/tasks/main.yml
@@ -2,8 +2,6 @@
 
 - name: Install RabbitMQ
   apt:
-    name: "{{ item }}"
-    state: installed
-  with_items:
-    - rabbitmq-server
+    name: 'rabbitmq-server'
+    state: present
   become: yes
