--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -2,14 +2,8 @@
 
 - name: Install Python
   apt:
-    name: "{{ item }}"
+    name: ['python3', 'python3-pip', 'python3-venv', 'python-pip', 'python-virtualenv']
     state: present
-  with_items:
-    - python3
-    - python3-pip
-    - python3-venv
-    - python-pip
-    - python-virtualenv
   become: yes
 
 - name: Upgrade system pip
