--- a/roles/fc-backend/tasks/main.yml
+++ b/roles/fc-backend/tasks/main.yml
@@ -64,20 +64,11 @@
 
     - name: FC | Install Python packages
       pip:
-        name: '{{ item }}'
+        name: ['numpy', 'scipy', 'cython', 'tables', 'numexpr', 'matplotlib<2', 'lxml', 'git+https://github.com/pints-team/pints.git']
         state: present
         virtualenv: '{{ fc_virtualenv }}'
         virtualenv_python: python2
         virtualenv_site_packages: yes
-      with_items:
-        - numpy
-        - scipy
-        - cython
-        - tables
-        - numexpr
-        - matplotlib<2
-        - lxml
-        - git+https://github.com/pints-team/pints.git
 
     - name: Stat FC exe
       stat:
