--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -88,6 +88,18 @@
         settings: config.settings.deployed
         virtualenv: '{{ django_virtualenv }}'
 
+    - name: Django | Check if superuser already exists
+      django_manage:
+        command: shell -c "from django.contrib.auth import get_user_model; User = get_user_model(); print(User.objects.filter(username='{{ django_superuser_username }}').exists())"
+                 --email={{ django_superuser_email|quote }}
+                 --full_name={{ django_superuser_full_name|quote }}
+                 --institution={{ django_superuser_institution|quote }}
+        app_path: "{{ django_app_path }}"
+        settings: config.settings.deployed
+        virtualenv: "{{ django_virtualenv }}"
+      when: django_superuser_email is defined and django_superuser_email != ''
+      register: django_superuser_exists
+
     - name: Django | Create initial superuser
       django_manage:
         command: createsuperuser --noinput
@@ -98,8 +110,7 @@
         app_path: "{{ django_app_path }}"
         settings: config.settings.deployed
         virtualenv: "{{ django_virtualenv }}"
-      # ignore_errors: True  # So doesn't complain if user already exists
-      when: django_superuser_email is defined and django_superuser_email != ''
+      when: django_superuser_email is defined and django_superuser_email != '' and not(bool(django_superuser_exists))
 
 # Build static files with gulp
 
