--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -90,7 +90,7 @@
 
     - name: Django | Check if superuser already exists
       django_manage:
-        command: shell -c "from django.contrib.auth import get_user_model; User = get_user_model(); print(User.objects.filter(email={{ django_superuser_email|quote }}).exists())"
+        command: shell -c "from django.contrib.auth import get_user_model; User = get_user_model(); print(User.objects.filter(email='{{ django_superuser_email }}').exists())"
         app_path: "{{ django_app_path }}"
         settings: config.settings.deployed
         virtualenv: "{{ django_virtualenv }}"
