--- a/roles/django/vars/main.yml
+++ b/roles/django/vars/main.yml
@@ -6,12 +6,12 @@ postgresql_databases:
   - name: "{{ django_db_name }}"
     lc_collate: 'en_GB.UTF-8'
     lc_ctype: 'en_GB.UTF-8'
-    #owner: "{{ django_db_user }}"
+    owner: "{{ django_db_user }}"
 postgresql_users:
   - name: "{{ django_db_user }}"
     password: "{{ django_db_pass }}"
-    priv: ALL
-    db: "{{ django_db_name }}"
+    # priv: ALL
+    # db: "{{ django_db_name }}"
     # role_attr_flags: CREATEDB iff inventory==dev
     # Can't do this here; need to use a task and when: ? Or omit?
 postgresql_locales:
