--- a/roles/fc-backend/defaults/main.yml
+++ b/roles/fc-backend/defaults/main.yml
@@ -3,8 +3,8 @@
 # User the FC backend will be installed under
 fc_user: celery
 
-# Where to install Python packages for the backend
-fc_virtualenv: /opt/celery/venv
+# Where to install Python packages for the Chaste-based backend
+legacy_fc_virtualenv: "{{ user_meta[fc_user].home }}/python2_venv"
 
 # Chaste backend configuration
 chaste_repo: https://chaste.cs.ox.ac.uk/git/chaste.git
@@ -21,3 +21,9 @@ fitting_prototype_repo: https://github.com/ModellingWebLab/chaste-project-fittin
 fitting_prototype_project_name: "AidanDaly"
 fitting_prototype_root: "{{ chaste_root }}/projects/{{ fitting_prototype_project_name }}"
 fitting_exe: "{{ fitting_prototype_root }}/service.sh"
+
+# The new weblab-fc backend
+weblab_fc_virtualenv: /opt/weblab-fc/venv
+weblab_fc_repo: https://github.com/ModellingWebLab/weblab-fc.git
+weblab_fc_branch: master
+weblab_fc_root: /opt/weblab-fc/repo
