--- a/roles/fc-backend/tasks/main.yml
+++ b/roles/fc-backend/tasks/main.yml
@@ -66,9 +66,7 @@
       pip:
         name: ['numpy', 'scipy', 'cython', 'tables', 'numexpr', 'matplotlib<2', 'lxml', 'git+https://github.com/pints-team/pints.git']
         state: present
-        virtualenv: '{{ fc_virtualenv }}'
-        virtualenv_python: python2
-        virtualenv_site_packages: yes
+        virtualenv: '{{ legacy_fc_virtualenv }}'
 
     - name: Stat FC exe
       stat:
@@ -78,13 +76,13 @@
     - name: Install Chaste build script
       template:
         src: build_chaste.j2
-        dest: '{{ fc_virtualenv }}/bin/build_chaste'
+        dest: '{{ legacy_fc_virtualenv }}/bin/build_chaste'
         mode: 0755
       register: build_script
 
     - name: Ensure Chaste is rebuilt at this point, if needed
       # We can't use a handler, as it's not possible to force a handler to run before the next role's tasks
-      command: '{{ fc_virtualenv }}/bin/build_chaste'
+      command: '{{ legacy_fc_virtualenv }}/bin/build_chaste'
       when: code_chaste.changed or code_fc.changed or build_script.changed or fc_exe.stat.exists == False
 
 - name: FC | Copy ontology definition
@@ -92,3 +90,38 @@
     name: ontology
   vars:
     onto_destination: '{{ chaste_root }}/python/pycml/oxford-metadata.rdf'
+
+# Moving towards WL2, we need the weblab-fc backend, although it isn't being used to run experiments yet
+
+- name: weblab-fc | Ensure parent folder exists
+  file:
+    path: '{{ weblab_fc_root | dirname }}'
+    state: directory
+    owner: '{{ fc_user }}'
+    mode: 0755
+  become: yes
+
+- name: weblab-fc
+  become: yes
+  become_user: '{{ fc_user }}'
+  block:
+  - name: weblab-fc | Clone repository
+    git:
+      clone: yes
+      dest: '{{ weblab_fc_root }}'
+      repo: '{{ weblab_fc_repo }}'
+      version: '{{ weblab_fc_branch }}'
+      update: yes
+      force: yes
+
+  - name: weblab-fc | Install packages needed by setup.py
+    pip:
+      requirements: '{{ weblab_fc_root }}/requirements/setup.txt'
+      state: present
+      virtualenv: '{{ weblab_fc_virtualenv }}'
+
+  - name: weblab-fc | Install packages
+    pip:
+      name: ['{{ weblab_fc_root }}']
+      state: latest
+      virtualenv: '{{ weblab_fc_virtualenv }}'
