--- a/roles/celery/handlers/main.yml
+++ b/roles/celery/handlers/main.yml
@@ -4,6 +4,18 @@
   become: true
   systemd: daemon_reload=yes
 
+- name: clean celery state
+  become: true
+  block:
+    file:
+      path: '{{ celery_state_dir }}'
+      state: absent
+    file:
+      path: '{{ celery_state_dir }}'
+      state: directory
+      owner: '{{ celery_user }}'
+      mode: 0755
+
 - name: restart celery
   listen: restart experiment runner
   become: true
