--- a/roles/nginx/vars/main.yml
+++ b/roles/nginx/vars/main.yml
@@ -17,10 +17,10 @@ nginx_vhosts:
     state: "present"
     extra_parameters: |
       {% if inventory == 'production' %}
-      ssl_protocols TLSv1.2 TLSv1.3;
+      ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
       ssl_prefer_server_ciphers on;
       ssl_session_cache shared:SSL:10m;
-      ssl_ciphers 'ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCMSHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256';
+      ssl_ciphers 'ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCMSHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:DHE-RSAAES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256';
       ssl_session_tickets off;
       ssl_dhparam {{ dh_param_path }};
 
