--- a/roles/django/vars/main.yml
+++ b/roles/django/vars/main.yml
@@ -14,5 +14,6 @@ postgresql_users:
     # db: "{{ django_db_name }}"
     # role_attr_flags: CREATEDB iff inventory==dev
     # Can't do this here; need to use a task and when: ? Or omit?
+# postgres_users_no_log: false  # Useful for debugging if an error!
 postgresql_locales:
   - 'en_GB.UTF-8'
