--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Install Python
   apt:
-    name: ['python3', 'python3-pip', 'python3-venv', 'python-pip', 'python-virtualenv']
+    name: ['python3', 'python3-pip', 'python3-venv', 'python-pip', 'python-virtualenv', 'python-psycopg2']
     state: present
   become: yes
 
