The uwsgi Python plugin has changed name

--- a/roles/uwsgi/templates/django-uwsgi.ini
+++ b/roles/uwsgi/templates/django-uwsgi.ini
@@ -10,7 +10,7 @@ module = config.wsgi:application
 master = true
 # maximum number of worker processes
 processes = {{ uwsgi_processes }}
-plugin = python
+plugin = python3
 
 socket = {{ uwsgi_socket }}
 chown-socket = %(uid):{{ nginx_group }}
